--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start-backend": "node backend/server.js"
+    "start": "node backend/server.js",
+    "start.backend": "node backend/server.js"
   },
   "dependencies": {
     "@types/node": "^17.0.32",
