--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start.backend": "node backend/server.js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/node": "^17.0.32",
     "@types/react-router-dom": "^5.3.3",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "firestore-export-import": "^1.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.3-alpha.2"
   },
